# tennis_app

./: Dockerfile  README.md  docker-compose.yml  sample.sql
.devcontainer/: devcontainer.json
backend/: pyproject.toml  tennis_app_table.drawio
backend/app/: README.md  index.py  pyproject.toml  table_spec.md
docs/: aws.md  user_group.md
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.tsx  index.tsx  store.ts  type.ts  useCreatePlayer.ts  useGameScore.ts  useGetPlayerList.tsx  useModalPointDetail.ts  usePointOrMissStringBuilder.ts  useSelectPlayer.ts  useSettingNewGame.ts  useValidatePage.ts
frontend/app/src/components/CreatePlayer/: CreatePlayer.tsx
frontend/app/src/components/GameScore/: GameScore.css  GameScore.tsx
frontend/app/src/components/MatchData/: MatchData.tsx  MatchList.tsx
frontend/app/src/components/Modal/: Modal.tsx
frontend/app/src/components/Modal/Serve/: Serve.tsx
frontend/app/src/components/NavigateCreatePlayerButton/: NavigateCreatePlayerButton.css  NavigateCreatePlayerButton.tsx
frontend/app/src/components/NewGame/: Newgame.tsx
frontend/app/src/components/SelectGamePlayers/: SelectGamePlayers.css  SelectGamePlayers.tsx
frontend/app/src/components/SelectPlayer/: SelectPlayer.tsx
frontend/app/src/hooks/: useGameScore.ts  useGetMatchData.ts  useGetMatchDetail.ts  useGetMatchList.ts  useGetPlayerList.tsx  useInsertMatchData.ts  useModalPointDetail.ts  usePointOrMissStringBuilder.ts  useResetModalState.ts  useSelectGamePlayer.ts  useSelectPlayer.ts  useServeData.ts  useSettingNewGame.ts  useValidatePage.ts
(+58 files in other folders)
