[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["tomoya <cj.0s0ttw.nsm4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
psycopg2 = "^2.9.5"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
